:sparkles: add project 2 - progress steps

--- a/project-1-expanding-cards/index.html
+++ b/project-1-expanding-cards/index.html
@@ -9,6 +9,7 @@
     <title>Expanding Cards</title>
   </head>
   <body>
+    <h1>Argentina World Cup 2022</h1>
     <div class="container">
       <div class="card active" style="background-image: url('https://w0.peakpx.com/wallpaper/821/512/HD-wallpaper-lionel-messi-world-cup-2014-final-argentina-03.jpg');">
         <h3>Messi</h3>
